# ai-info

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.trae/documents/: create-ai-info-skill-plan.md
.trae/specs/add-article-time-filter/: checklist.md  spec.md  tasks.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/ai_info_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: cb5bb8bc7b8b_initial.py
backend/app/: config.py  database.py  main.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_compat.py  prompts.py
backend/app/models/: __init__.py  article.py  feed.py  llm_config.py  summary.py  task.py
backend/app/routers/: articles.py  feeds.py  llm.py  opml.py  summaries.py  tasks.py
backend/app/schemas/: __init__.py  article.py  feed.py  llm.py  summary.py  task.py
backend/app/services/: digest_service.py  feed_service.py  opml_service.py  scheduler_service.py  summary_service.py
backend/app/utils/: text.py
design-system/ai-info/: MASTER.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: articles.ts  client.ts  dashboard.ts  feeds.ts  settings.ts  summaries.ts
frontend/src/pages/: Articles.tsx  Dashboard.tsx  Digests.tsx  Feeds.tsx  Settings.tsx
frontend/src/store/: appStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
skills/RSS-Local-Reader/: SKILL.md
skills/RSS-Local-Reader/references/: api.md
skills/RSS-Local-Reader/scripts/: api_client.py
(+32 files in other folders)
